# JsonConverter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  conanfile.txt  job-template.yml  license_brief.txt
ci/: build-and-test.yml  compiler-stdlib-setup.yml  deps-setup.yml
cmake/: converter_externals.cmake  converter_options.cmake  converter_ubasan.cmake
examples/: CMakeLists.txt  overview.cpp
include/ossiaco/converter/: adapt.hpp  allocate.hpp  components.hpp  config.hpp  converter.hpp  serialize.hpp
include/ossiaco/converter/allocate/: decorator.hpp  dispatch.hpp  enum_to_type.hpp  mapped.hpp  simple.hpp  type_allocator.hpp
include/ossiaco/converter/components/: chrono_fmt_json_property.hpp  chrono_fmt_prop_converter.hpp  custom_value.hpp  dispatch.hpp  first_class.hpp  json_property.hpp  property_converter.hpp  ranges.hpp  smart_ptr.hpp  template_get_write.hpp  vocab_type.hpp  vocab_type_fwd.hpp
include/ossiaco/converter/core/: buffers_streams_writers.hpp  char_types.hpp  exceptions.hpp  not_found.hpp  pointer_wrapper.hpp  reference_mapper.hpp  traits.hpp  type_tree.hpp
include/ossiaco/converter/hooks/: logging.hpp
include/ossiaco/converter/serialize/: deserializer.hpp  json_converter.hpp  serializer.hpp  to_json_pretty.hpp
include/ossiaco/converter/utils/: accessors.hpp  customized.hpp  detect_specialization.hpp  file_handle.hpp  inconstructible.hpp  is_detected.hpp  print_type_name.hpp  select_overload.hpp  string_convert.hpp
tests/: test_main.cpp
tests/integration/: CMakeLists.txt  adapt.cpp  allocate.cpp  components.cpp  integration_main.cpp  serialize.cpp
tests/unit/: CMakeLists.txt  catch_main.cpp  final_primitive.cpp  test_main.cpp  test_utils.hpp
tests/unit/core_final/: CMakeLists.txt  main.cpp  opaque_conversion.cpp  optional_fields.cpp  primitive.cpp  ranges.cpp  smart_ptr.cpp  unilateral_to_json.cpp  vocab_types.cpp
tests/unit/customization_points/: CMakeLists.txt  assert_throw.cpp  custom_value.cpp  decorator_hook.cpp  main.cpp
tests/unit/enum_mapped/: CMakeLists.txt  main.cpp  single_level.cpp  two_level.cpp
tests/unit/poly_decorator/: CMakeLists.txt  abstract_base.cpp  adapt_make_tuple.cpp  main.cpp
tests/unit/types/: boost_uuid.hpp  chess.hpp  digraph.hpp  light.hpp  messages.hpp  messages2.hpp  nested_ranges.hpp  opaque.cpp  opaque.hpp  optional_fields.hpp  person.hpp  point_3d.hpp  shape.hpp  sprint_record.hpp  udt_ranges.hpp
